crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_line_ending_crlf.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..30
  HEADING@0..10
    ATX_HEADING_MARKER@0..1
      ATX_HEADING_MARKER@0..1 "#"
    WHITESPACE@1..2 " "
    HEADING_CONTENT@2..9
      TEXT@2..9 "Heading"
    NEWLINE@9..10 "\n"
  BLANK_LINE@10..11
    BLANK_LINE@10..11 "\n"
  PARAGRAPH@11..30
    TEXT@11..29 "Paragraph with LF."
    NEWLINE@29..30 "\n"
