crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_link_in_link_reference_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..41
  PARAGRAPH@0..28
    TEXT@0..5 "[foo "
    EMPHASIS@5..21
      EMPHASIS_MARKER@5..6 "*"
      TEXT@6..10 "bar "
      LINK@10..20
        LINK_START@10..11
          LINK_START@10..11 "["
        LINK_TEXT@11..14
          TEXT@11..14 "baz"
        TEXT@14..15 "]"
        TEXT@15..16 "["
        LINK_REF@16..19
          TEXT@16..19 "ref"
        TEXT@19..20 "]"
      EMPHASIS_MARKER@20..21 "*"
    TEXT@21..22 "]"
    LINK@22..27
      LINK_START@22..23
        LINK_START@22..23 "["
      LINK_TEXT@23..26
        TEXT@23..26 "ref"
      TEXT@26..27 "]"
    NEWLINE@27..28 "\n"
  BLANK_LINE@28..29
    BLANK_LINE@28..29 "\n"
  REFERENCE_DEFINITION@29..41
    LINK@29..34
      LINK_START@29..30
        LINK_START@29..30 "["
      LINK_TEXT@30..33
        TEXT@30..33 "ref"
      TEXT@33..34 "]"
    TEXT@34..40 ": /uri"
    NEWLINE@40..41 "\n"
