crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_link_inside_link_text_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..24
  PARAGRAPH@0..24
    TEXT@0..5 "[foo "
    LINK@5..16
      LINK_START@5..6
        LINK_START@5..6 "["
      LINK_TEXT@6..9
        TEXT@6..9 "bar"
      LINK_TEXT_END@9..10 "]"
      LINK_DEST_START@10..11 "("
      LINK_DEST@11..15
        TEXT@11..15 "/uri"
      LINK_DEST_END@15..16 ")"
    TEXT@16..23 "](/uri)"
    NEWLINE@23..24 "\n"
