crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_link_inside_link_text_pandoc.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 97
expression: cst_output
---
DOCUMENT@0..24
  PARAGRAPH@0..24
    LINK@0..23
      LINK_START@0..1
        LINK_START@0..1 "["
      LINK_TEXT@1..16
        TEXT@1..16 "foo [bar](/uri)"
      LINK_TEXT_END@16..17 "]"
      LINK_DEST_START@17..18 "("
      LINK_DEST@18..22
        TEXT@18..22 "/uri"
      LINK_DEST_END@22..23 ")"
    NEWLINE@23..24 "\n"
